--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
 # All options are optional, remove those you do not need
 VITE_CUSTOM_API_ENDPOINT=
 VITE_DEFAULT_API_ENDPOINT=
-VITE_OPENAI_API_KEY=
-VITE_DEFAULT_SYSTEM_MESSAGE=     # Remove this line if you want to use the default system message of Better ChatGPT
-VITE_GOOGLE_CLIENT_ID=           # for syncing data with google drive
+VITE_OPENAI_API_KEY=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
